fix: PlaceFinder v:1.0 Exception Handling